--- a/templates/CustomKotlin.xml
+++ b/templates/CustomKotlin.xml
@@ -14,4 +14,12 @@
       <option name="KOTLIN_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="test" value="/**&#10; * $COMMENT$&#10; */&#10;@Test&#10;fun `$TESTNAME$`() {&#10;    $BODY$&#10;}" description="Test format" toReformat="false" toShortenFQNames="true">
+    <variable name="TESTNAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="COMMENT" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="BODY" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="KOTLIN_CLASS" value="true" />
+    </context>
+  </template>
 </templateSet>
